--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     "lint:fix": "eslint --fix \"src/**.ts?(x)\"",
     "lint:staged": "lint-staged",
     "ci:format": "prettier \"src/**.ts?(x)\" --check",
-    "format": "prettier \"src/**.ts?(x)\" --write"
+    "format": "prettier \"src/**.ts?(x)\" --write",
+    "prepare": "husky .husky"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"],
-    "rules": {
-    },
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "rules": {},
     "overrides": [
       {
-        "files": ["**/*.ts?(x)"],
-        "rules": {
-        }
+        "files": [
+          "**/*.ts?(x)"
+        ],
+        "rules": {}
       }
     ]
   },
@@ -51,5 +55,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
+  }, 
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint --cache  \"src/**.ts?(x)\""
   }
 }
