--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
     "prettier": "^3.2.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -30,11 +37,154 @@
     "prepare": "husky .husky"
   },
   "eslintConfig": {
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
+    },
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "import",
+      "prettier",
+      "@typescript-eslint",
+      "typescript-sort-keys"
+    ],
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "airbnb-typescript",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended-requiring-type-checking",
+      "plugin:prettier/recommended"
     ],
-    "rules": {},
+    "parserOptions": {
+      "ecmaVersion": 2023,
+      "project": "./tsconfig.json",
+      "tsconfigRootDir": "./"
+    },
+    "root": true,
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "rules": {
+      "no-return-await": "error",
+      "no-var": "error",
+      "no-debugger": "error",
+      "no-console": "warn",
+      "no-restricted-syntax": ["off", "ForOfStatement"],
+      "lines-between-class-members": "off",
+      "class-methods-use-this": "error",
+      "quotes": ["error", "single"],
+      "semi": ["error", "always"],
+      "object-curly-spacing": ["error", "always"],
+      "key-spacing": ["error", { "afterColon": true }],
+      "no-multi-spaces": "error",
+      "sort-imports": ["error", { "ignoreDeclarationSort": true }],
+      "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+      "import/prefer-default-export": "off",
+      "import/no-duplicates": ["error", { "considerQueryString": true }],
+      "import/order": [
+        "error",
+        {
+          "groups": ["builtin", "external", "internal", "parent", "sibling"],
+          "newlines-between": "always",
+          "alphabetize": {
+            "order": "asc",
+            "caseInsensitive": true
+          }
+        }
+      ],
+      "import/exports-last": ["error"],
+      "import/newline-after-import": ["error"],
+      "padding-line-between-statements": [
+        "error",
+        { "blankLine": "always", "prev": "*", "next": "return" },
+        { "blankLine": "always", "prev": ["const", "let", "var"], "next": "*" },
+        {
+          "blankLine": "any",
+          "prev": ["const", "let", "var"],
+          "next": ["const", "let", "var"]
+        }
+      ],
+      "prettier/prettier": "error",
+      "@typescript-eslint/return-await": ["error", "in-try-catch"],
+      "@typescript-eslint/no-explicit-any": "error",
+      "@typescript-eslint/unbound-method": "error",
+      "@typescript-eslint/no-misused-promises": [
+        "error",
+        { "checksVoidReturn": false }
+      ],
+      "@typescript-eslint/no-unsafe-member-access": "error",
+      "@typescript-eslint/no-unsafe-call": "error",
+      "@typescript-eslint/member-ordering": [
+        "error",
+        {
+          "default": {
+            "memberTypes": [
+              "signature",
+
+              "public-instance-field",
+              "protected-instance-field",
+              "private-instance-field",
+              "public-static-field",
+              "protected-static-field",
+              "private-static-field",
+              "public-abstract-field",
+              "protected-abstract-field",
+              "field",
+
+              "public-constructor",
+              "protected-constructor",
+              "private-constructor",
+              "constructor",
+
+              "public-instance-get",
+              "protected-instance-get",
+              "private-instance-get",
+              "public-static-get",
+              "protected-static-get",
+              "private-static-get",
+              "public-abstract-get",
+              "protected-abstract-get",
+              "get",
+
+              "public-instance-set",
+              "protected-instance-set",
+              "private-instance-set",
+              "public-static-set",
+              "protected-static-set",
+              "private-static-set",
+              "public-abstract-set",
+              "protected-abstract-set",
+              "set",
+
+              "public-instance-method",
+              "protected-instance-method",
+              "private-instance-method",
+              "public-static-method",
+              "protected-static-method",
+              "private-static-method",
+              "public-abstract-method",
+              "protected-abstract-method",
+              "method"
+            ],
+            "order": "alphabetically"
+          }
+        }
+      ],
+      "@typescript-eslint/lines-between-class-members": 2,
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "ts": "never",
+          "tsx": "never"
+        }
+      ],
+      "typescript-sort-keys/interface": "off",
+      "typescript-sort-keys/string-enum": "error"
+    },
     "overrides": [
       {
         "files": [
@@ -59,7 +209,7 @@
   "devDependencies": {
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2"
-  }, 
+  },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --cache  \"src/**.ts?(x)\""
   }
