--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.2.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
