--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.2.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
@@ -34,11 +35,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"src/**.ts?(x)\"",
-    "lint:fix": "eslint --fix \"src/**.ts?(x)\"",
+    "lint": "eslint \"src/**/*.ts?(x)\"",
+    "lint:fix": "eslint --fix \"src/**/*.ts?(x)\"",
     "lint:staged": "lint-staged",
-    "ci:format": "prettier \"src/**.ts?(x)\" --check",
-    "format": "prettier \"src/**.ts?(x)\" --write",
+    "ci:format": "prettier \"src/**/*.ts?(x)\" --check",
+    "format": "prettier \"src/**/*.ts?(x)\" --write",
     "prepare": "husky .husky"
   },
   "eslintConfig": {
