--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**.ts?(x)\"",
-    "lint:fix": "eslint --fix \"src/**.ts?(x)\"",
+    "lint:fix": "eslint --fix \"src/**/*.ts?(x)\"",
     "lint:staged": "lint-staged",
     "ci:format": "prettier \"src/**/*.ts?(x)\" --check",
     "format": "prettier \"src/**/*.ts?(x)\" --write",
