--- a/package.json
+++ b/package.json
@@ -280,6 +280,7 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.11",
+    "hamburger-react": "^2.5.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2"
   },
