--- a/package.json
+++ b/package.json
@@ -279,6 +279,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.5",
     "@types/node-fetch": "^2.6.11",
     "hamburger-react": "^2.5.1",
     "husky": "^9.0.11",
