--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@commercetools/platform-sdk": "^7.8.0",
+    "@commercetools/sdk-client-v2": "^2.5.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@types/toastify-js": "^1.12.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -19,25 +22,28 @@
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
+    "toastify-js": "^1.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject",
-    "lint": "eslint \"src/**.ts?(x)\"",
-    "lint:fix": "eslint --fix \"src/**.ts?(x)\"",
+    "lint": "eslint \"src/**/*.ts?(x)\"",
+    "lint:fix": "eslint --fix \"src/**/*.ts?(x)\"",
     "lint:staged": "lint-staged",
-    "ci:format": "prettier \"src/**.ts?(x)\" --check",
-    "format": "prettier \"src/**.ts?(x)\" --write",
+    "ci:format": "prettier \"src/**/*.ts?(x)\" --check",
+    "format": "prettier \"src/**/*.ts?(x)\" --write",
     "prepare": "husky .husky"
   },
   "eslintConfig": {
@@ -273,6 +279,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.5",
+    "@types/node-fetch": "^2.6.11",
+    "hamburger-react": "^2.5.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2"
   },
