--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
     "react": "^18.3.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
