--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "match-sorter": "^6.3.4",
     "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
+    "rc-slider": "^10.6.2",
     "react": "^18.3.0",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.3.0",
