--- a/package.json
+++ b/package.json
@@ -291,5 +291,12 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --cache  \"src/**.ts?(x)\""
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "swiper/css": "swiper/swiper.min.css",
+      "swiper/react": "swiper/swiper-react.mjs",
+      "swiper/modules": "swiper/modules/index.mjs"
+    }
   }
 }
