fix: change product repo logic

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
         "ForOfStatement"
       ],
       "lines-between-class-members": "off",
-      "class-methods-use-this": "error",
+      "class-methods-use-this": "off",
       "quotes": [
         "error",
         "single"
