Feat/implement tests for detailed page (#99)
* feat: implement spinner

* fix: chenge pruduct images styles

* fix: change slider styles

* feat: add spinner test

* feat: add default page render test

* feat: implement single image rendering logic test

* feat: implemplement slider rendering logic tests

* feat: implement product images modal window tests

* fix: change product repo logic

* feat: change detailed page logic

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
         "ForOfStatement"
       ],
       "lines-between-class-members": "off",
-      "class-methods-use-this": "error",
+      "class-methods-use-this": "off",
       "quotes": [
         "error",
         "single"
@@ -291,5 +291,12 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --cache  \"src/**.ts?(x)\""
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "swiper/css": "swiper/swiper.min.css",
+      "swiper/react": "swiper/swiper-react.mjs",
+      "swiper/modules": "swiper/modules/index.mjs"
+    }
   }
 }
