--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "match-sorter": "^6.3.4",
     "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
+    "rc-slider": "^10.6.2",
     "react": "^18.3.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
+    "swiper": "^11.1.3",
     "toastify-js": "^1.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -87,7 +90,7 @@
         "ForOfStatement"
       ],
       "lines-between-class-members": "off",
-      "class-methods-use-this": "error",
+      "class-methods-use-this": "off",
       "quotes": [
         "error",
         "single"
@@ -288,5 +291,12 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --cache  \"src/**.ts?(x)\""
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "swiper/css": "swiper/swiper.min.css",
+      "swiper/react": "swiper/swiper-react.mjs",
+      "swiper/modules": "swiper/modules/index.mjs"
+    }
   }
 }
